--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
         </div>
 
-        <a href="" class="btn">Télécharger PDF</a>
+        <a href="Turpetko_Dmytro_cv.pdf" class="btn">Télécharger PDF</a>
     </aside>
 
     <!-- MAIN CONTENT -->
